Fix alignment of categories in legend

--- a/src/map/components/legend/_map-legend.scss
+++ b/src/map/components/legend/_map-legend.scss
@@ -74,6 +74,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    width: 100%;
   }
 
   &__toggle {
